--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 asgiref==3.8.1
-Django==5.1.7
 crispy-bootstrap5==0.6
+Django==5.1.7
 django-crispy-forms==2.3
+pillow==11.1.0
 sqlparse==0.5.3
 tzdata==2025.2
 whitenoise==6.9.0
