--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 asgiref==3.8.1
+crispy-bootstrap5==0.6
+Django==5.1.7
+django-crispy-forms==2.3
+pillow==11.1.0
 astroid==3.3.8
 colorama==0.4.6
 dill==0.3.9
-Django==4.2.19
 gunicorn==20.1.0
 isort==6.0.0
 mccabe==0.7.0
@@ -12,6 +15,6 @@ pylint-django==2.6.1
 pylint-plugin-utils==0.8.2
 setuptools==76.0.0
 sqlparse==0.5.3
+tzdata==2025.2
+whitenoise==6.9.0
 tomlkit==0.13.2
-tzdata==2025.1
-whitenoise==5.3.0
